Added more telemetry data and UI.